welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: ';' expected but integer literal found.
  if (a>b) {if (a-b)>=10 {return true}} 
                      ^lessBy10:3: error: ';' expected but integer literal found.
  else if (b>a) {if ((b-a))>=10 {return true}}
                             ^lessBy10:4: error: ';' expected but integer literal found.
	else if (a>c) {if ((a-c))>=10 {return true}}
                                   ^lessBy10:5: error: ';' expected but integer literal found.
	else if (c>a) {if ((c-a))>=10 {return true}}
                                   ^lessBy10:6: error: ';' expected but integer literal found.
	else if (b>c) {if ((b-c))>=10 {return true}}
                                   ^lessBy10:7: error: ';' expected but integer literal found.
	else if (c>b) {if ((c-b))>=10 {return true}}
                                   ^